# manuscript-tools

./: .gitmessage  LICENSE  Makefile  README.de.md  README.md  pyproject.toml
.githooks/: commit-msg
.github/workflows/: ci.yml
scripts/: bump_version.py
src/manuscript_tools/: __init__.py  checker.py  cli.py  config.py  formatting.py  io.py  metrics.py  models.py  quotes.py  sanitizer.py
tests/: test_checker.py  test_config.py  test_formatting.py  test_metrics.py  test_quotes.py  test_sanitizer.py
