[tool.poetry]
name = "manuscript-tools"
version = "0.1.0"
description = "Validation, sanitization and metrics for Markdown manuscripts."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "manuscript_tools", from = "src" }]

[tool.poetry.scripts]
ms-check = "manuscript_tools.cli:check"
ms-sanitize = "manuscript_tools.cli:sanitize"
ms-metrics = "manuscript_tools.cli:metrics"

[tool.poetry.dependencies]
python = "^3.11"
ftfy = "^6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.4"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
