[project]
name = "manuscript-tools"
version = "0.4.0"
description = "Validation, sanitization and metrics for Markdown manuscripts."
readme = "README.md"
[[project.authors]]
name = "Asterios Raptis"
email = "asteri.raptis@gmail.com"

[tool.poetry]
license = "BSD-3-Clause"
packages = [{ include = "manuscript_tools", from = "src" }]

[tool.poetry.scripts]
ms-check    = "manuscript_tools.cli:check"
ms-sanitize = "manuscript_tools.cli:sanitize"
ms-quotes   = "manuscript_tools.cli:quotes"
ms-metrics  = "manuscript_tools.cli:metrics"
ms-validate = "manuscript_tools.cli:validate"

[tool.poetry.dependencies]
python = "^3.11"
ftfy   = "^6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
ruff   = "^0.4"
questionary = { version = "^2.0", optional = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
